# SpreadMaximization

./: CMakeLists.txt  README.md
old_src/: Layer.h  Mat3Df.h  main.cpp
src/: Convolution.h  ConvolutionExample.cpp  ConvolutionTest.cpp  DisplayImage.cpp  GradientDescentFunction.h  Layer.h  LayerSignalData.h  Mat3D.h  Mat3Df.h  Network.cpp  Network.h  NetworkProcessor.h  Neuron.h  Pooling.h  PoolingFunction.h  PoolingLayer.h  Pos.h  Settings.h  SignalLayer.h  SignallingFunction.h  SubLayer.h  TransferFunction.h  TransferLayer.h  UpdateFunction.h  basics.h  main.cpp  test.cpp
src/layer/: Layer.h  Neuron.h  Pooling.h  PoolingFunction.cpp  PoolingFunction.h  PoolingLayer.h  PoolingLayerImpl.h  SignalLayer.cpp  SignalLayer.h  SignalLayerImpl.h  SoftmaxLayer.h  SubLayer.h  TransferFunction.h  TransferLayer.h
src/learning/: GradientDescentFunction.h  ObjectiveFunction.h  ParamInitializer.h  UpdateFunction.h  Updater.h
src/utils/: Convolution.h  Dataset.h  DifferentiableFunction.h  Dims.cpp  Dims.h  Mat3D.h  Mat3Df.h  Mat4D.h  Mat4Df.h  Mnist.h  Pos.h
